fix: view resource modal alignment

--- a/Dashboard/src/app/pages/resources/resources.component.scss
+++ b/Dashboard/src/app/pages/resources/resources.component.scss
@@ -5,6 +5,17 @@
     }
 }
 
+.modal-dialog {
+    color: $dropdown-text;
+    position: relative;
+    display: table;
+    /* This is important */
+    overflow-y: auto;
+    overflow-x: auto;
+    width: auto;
+    min-width: 300px;
+}
+
 :host /deep/ {
     ng2-smart-table {
         th,
