--- a/Dashboard/src/app/pages/resources/view-resource-modal/view-resource-modal.component.scss
+++ b/Dashboard/src/app/pages/resources/view-resource-modal/view-resource-modal.component.scss
@@ -3,7 +3,7 @@
     margin-right: 20px;
 }
 
-.modal-content {
+.modal-dialog {
     color: $dropdown-text;
     position: relative;
     display: table;
